# bookstore-automation-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: cart.html  catalog.html  checkout.html  index.html  login.html  order-success.html  orders.html
demo/css/: styles.css
demo/js/: app.js
mock_server/: __init__.py  server.py  store.py
scripts/: allure_cli.py
src/: __init__.py
src/main/api/builders/: __init__.py  book_builder.py  user_builder.py
src/main/api/clients/: __init__.py  http_client.py
src/main/api/controllers/: __init__.py  auth_controller.py  books_controller.py  cart_controller.py  orders_controller.py
src/main/api/flows/: __init__.py  auth_flow.py
src/main/api/models/: __init__.py  auth.py  book.py  cart.py  order.py
src/main/common/: annotations.py
src/main/common/config/: __init__.py  environment.py
src/main/common/constants/: __init__.py  test_users.py
src/main/ui/locators/: __init__.py  cart_locators.py  catalog_locators.py  checkout_locators.py  login_locators.py
src/main/ui/pages/: __init__.py  cart_page.py  catalog_page.py  checkout_page.py  login_page.py
src/main/ui/steps/: __init__.py  cart_steps.py  catalog_steps.py  checkout_steps.py  login_steps.py
src/test/: conftest.py
src/test/api/: test_books_crud.py  test_cart_api.py  test_orders_api.py
src/test/ui/: conftest.py  test_book_search.py  test_checkout.py  test_login.py  test_shopping_cart.py
